--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 
 		<script>
 
+			var dots = [3,6,12,12,2,2,8,8,4,4,10,10,6,6,4,4,11,11,10,10,7,7,6,6,9,9,8,8,7,7,5,5];
+			var tileNames = ["Gee Joon","Gee Joon","Teen","Teen","Day","Day","Yun","Yun","Gor","Gor","Mooy","Mooy","Chong","Chong","Bon","Bon","Foo","Foo","Ping","Ping","Tit","Tit","Look","Look","Chop Gow","Chop Gow","Chop Bot","Chop Bot","Chop Chit","Chot Chit","Chop Ng","Chop Ng"];
+			var ranks = [1,1,2,2,3,3,4,4,5,5,6,6,7,7,8,8,9,9,10,10,11,11,12,12,13,13,14,14,15,15,16,16];
+
 			var socket = io.connect();
 			var wallet = 0;
 			var bet = 0;
@@ -21,9 +25,12 @@
 			game['minimumBet'] = 0;
 			game['betsLocked'] = false;
 			game['state'] = "pregame";
-			game['stateChangeTime'] = 10000;
+			game['stateChangeTime'] = 5000;
 			game['lastStateChange'] = 0;
 			game['banker'] = -1;
+			game['tiles'] = [];
+			game['selectedTiles'] = [];
+			game['selectionLocked'] = false;
 
 			var updateGameInfo = function(){
 				var d = new Date();
@@ -60,18 +67,56 @@
     				if(state == "pregame"){
     					game.bet = game.minimumBet;
     				}
+    				if(state == "tile reveal"){
+    					if(game.selectedTiles.length != 2 && game.selectionLocked == false){
+    						game.selectedTiles = [game.tiles[0],game.tiles[1]];
+    						$('#one').attr('class','tileSelected');	//default selection
+    						$('#two').attr('class','tileSelected');
+    						$('#three').attr('class','tile');
+    						$('#four').attr('class','tile');
+    					}
+    					else if(game.selectionLocked == false){
+    						socket.emit('tile selection', game.selectedTiles);
+    					}
+    					else{
+    						socket.emit('tile selection', game.selectedTiles);	
+    					}
+    				}
     				game.lastStateChange = time;
     				updateGameInfo();
     				$("#messages").prepend("<li>Game state changed to "+state+"</li>");
     			});
 
     			socket.on('player dealt',function(tile){
+    				game.tiles.push(tile);
+    				if(game.tiles.length == 1){
+    					$("#one").html("id: "+tile+"<br>dots: "+dots[tile]+"<br>name: "+tileNames[tile]+"<br>rank: "+ranks[tile]);
+    				}
+    				if(game.tiles.length == 2){
+    					$("#two").html("id: "+tile+"<br>dots: "+dots[tile]+"<br>name: "+tileNames[tile]+"<br>rank: "+ranks[tile]);
+    				}
+    				if(game.tiles.length == 3){
+    					$("#three").html("id: "+tile+"<br>dots: "+dots[tile]+"<br>name: "+tileNames[tile]+"<br>rank: "+ranks[tile]);
+    				}
+    				if(game.tiles.length == 4){
+    					$("#four").html("id: "+tile+"<br>dots: "+dots[tile]+"<br>name: "+tileNames[tile]+"<br>rank: "+ranks[tile]);
+    				}
     				$("#messages").prepend("<li>Player dealt tile "+tile+"</li>");
+    			});
+    			socket.on('other player tiles',function(id,tiles){
+    				console.log(tiles);
+    				$("#messages").prepend("<li>Player "+id+" dealt tile "+tiles+"</li>");
+    			});
+    			socket.on('confirm selection locked',function(pair){
+    				$("#messages").prepend("<li>Server confirms pair locked: "+pair+"</li>");
+    			});
+    			socket.on('confirm selection unlocked',function(){
+    				$("#messages").prepend("<li>Server confirms pair unlocked</li>");
     			});
 
     			setInterval(function(){
     				updateGameInfo();
-    			},1);
+    			},50);
 
 
 
@@ -123,6 +168,63 @@
     				}
     				updateGameInfo();
     			});
+    			$("#one").click(function(){
+    				if(game.state == "pair selection"){
+    					$(this).toggleClass("tileSelected");
+    					if($(this).attr('class') == "tile tileSelected"){
+    						game.selectedTiles.push(game.tiles[0]);
+    					}
+    					else{
+    						game.selectedTiles.splice(0,1);
+    					}
+    				}
+    				console.log(game.selectedTiles);
+    			});
+    			$("#two").click(function(){
+    				if(game.state == "pair selection"){
+    					$(this).toggleClass("tileSelected");
+    					if($(this).attr('class') == "tile tileSelected"){
+    						game.selectedTiles.push(game.tiles[1]);
+    					}
+    					else{
+    						game.selectedTiles.splice(0,1);
+    					}
+    				}
+    			});
+    			$("#three").click(function(){
+    				if(game.state == "pair selection"){
+    					$(this).toggleClass("tileSelected");
+    					if($(this).attr('class') == "tile tileSelected"){
+    						game.selectedTiles.push(game.tiles[2]);
+    					}
+    					else{
+    						game.selectedTiles.splice(0,1);
+    					}
+    				}
+    			});
+    			$("#four").click(function(){
+    				if(game.state == "pair selection"){
+    					$(this).toggleClass("tileSelected");
+    					if($(this).attr('class') == "tile tileSelected"){
+    						game.selectedTiles.push(game.tiles[3]);
+    					}
+    					else{
+    						game.selectedTiles.splice(0,1);
+    					}
+    				}
+    			});
+    			$("#lockPair").click(function(){
+    				if(game.state == "pair selection" && game.selectedTiles.length == 2 && !game.selectionLocked){
+    					game.selectionLocked = true;
+    					socket.emit('pair selection locked',game.selectedTiles);
+    				}
+    			});
+    			$("#unlockPair").click(function(){
+    				if(game.state == "pair selection" && game.selectionLocked){
+    					game.selectionLocked = false;
+    					socket.emit('pair selection unlocked');
+    				}
+    			});
 
 
 			});
@@ -150,6 +252,16 @@
 					</div>
 					<div id="gameInformation">
 						
+					</div>
+					<div id="tileSelection">
+						<div class="tile" id='one'>
+						</div>
+						<div class="tile" id='two'>
+						</div>
+						<div class="tile" id='three'>
+						</div>
+						<div class="tile" id='four'>
+						</div>
 					</div>
 				</div>
 				<div>
